tests/syntax_error/missing_args_method.jou
class Foo:
    def bar:  # Error: expected a '(' to denote the start of arguments, got ':'
        return
